cmake_minimum_required(VERSION 3.24)
project(project3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(
        project3
#        space.cpp
#        "phone number.cpp"
#        "software backup.cpp"
#        "phone service.cpp"
#        "phone_service.cpp"
#        phone_service.cpp
#        practice1_person.cpp
        conpany_manage.cpp)
